# django-test-driven-learning

./: pyproject.toml  pyrightconfig.json
apidemo/apidemo/: models.py  settings.py  urls.py
apidemo/apidemo/migrations/: 0001_initial.py  0002_remove_employee_department.py
mysite/mysite/: settings.py
mysite/polls/: admin.py  apps.py  models.py  tests.py  urls.py  views.py
mysite/polls/migrations/: 0001_initial.py
mysite/polls/templates/polls/: detail.html  index.html  results.html
mysite/templates/admin/: base_site.html
typings/ninja/: __init__.pyi  conf.pyi  constants.pyi  errors.pyi  files.pyi  main.pyi  operation.pyi  pagination.pyi  params.pyi  params_functions.pyi  params_models.pyi  parser.pyi  renderers.pyi  responses.pyi  router.pyi  schema.pyi  types.pyi  utils.pyi
typings/ninja/compatibility/: __init__.pyi  datastructures.pyi  request.pyi  util.pyi
typings/ninja/openapi/: __init__.pyi  schema.pyi  urls.pyi  views.pyi
typings/ninja/orm/: __init__.pyi  factory.pyi  fields.pyi  metaclass.pyi
typings/ninja/security/: __init__.pyi  apikey.pyi  base.pyi  http.pyi  session.pyi
typings/ninja/signature/: __init__.pyi  details.pyi  utils.pyi
typings/ninja/testing/: __init__.pyi  client.pyi
