[tool.poetry]
name = "django-test-driven-learning"
version = "0.1.0"
description = ""
authors = ["Sanghyun Lee <hammerha@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
skip-string-normalization = true
